# snora

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.test.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  gpu-tests.yml  release.yml
charts/snora/: Chart.yaml  values.yaml
charts/snora/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pdb.yaml  secret.yaml  service.yaml
docker/: Dockerfile  Dockerfile.cuda  start.sh
docs/superpowers/plans/: 2026-03-22-snora-cuda-engine.md  2026-03-22-snora-infrastructure.md  2026-03-22-snora-nodejs-services.md
docs/superpowers/specs/: 2026-03-22-snora-design.md
engine/: CMakeLists.txt
engine/src/: main.cpp
engine/src/agora/: agora_sender.cpp  agora_sender.h
engine/src/audio/: amplitude_mod.cpp  amplitude_mod.cu  amplitude_mod.h  audio_format.h  binaural.cpp  binaural.cu  binaural.h  mixer.cpp  mixer.cu  mixer.h  nature_player.cpp  nature_player.h  noise_gen.cpp  noise_gen.cu  noise_gen.h  param_smoother.cpp  param_smoother.h  pipeline.cpp  pipeline.h  procedural.cpp  procedural.cu  procedural.h  spectral_tilt.cpp  spectral_tilt.cu  spectral_tilt.h
engine/src/ipc/: message.cpp  message.h  socket_server.cpp  socket_server.h
engine/src/state/: param_mapper.cpp  param_mapper.h  session_state.cpp  session_state.h
engine/tests/: test_amplitude_mod.cpp  test_audio_quality.cpp  test_binaural.cpp  test_e2e_engine.cpp  test_message.cpp  test_mixer.cpp  test_nature_player.cpp  test_noise_gen.cpp  test_param_mapper.cpp  test_param_smoother.cpp  test_pipeline.cpp  test_procedural.cpp  test_session_lifecycle.cpp  test_socket_server.cpp  test_spectral_tilt.cpp
scripts/: demo-session.sh  dev-session.sh  dev-test.ts  stream-live.ts
src/api/: main.ts  server.ts
src/api/plugins/: auth.ts
src/api/routes/: health.ts  metrics.ts  sessions.ts
src/shared/: config.ts  ipc-protocol.ts  job-repository.ts  logger.ts  redis.ts  types.ts  validation.ts
src/worker/: engine-bridge.ts  heartbeat.ts  main.ts  manager.ts  session-monitor.ts
tests/fixtures/: mock-engine.ts
tests/integration/: session-lifecycle.test.ts
tests/unit/api/: auth.test.ts  health.test.ts  rate-limit.test.ts  sessions.test.ts
tests/unit/shared/: config.test.ts  ipc-protocol.test.ts  job-repository.test.ts  validation.test.ts
tests/unit/worker/: engine-bridge.test.ts  heartbeat.test.ts  manager.test.ts  session-monitor.test.ts
